[tool.poetry]
name = "scrapys"
version = "0.1.0"
description = ""
authors = ["“linbuxiao” <linbuxiao@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
scrapy = "^2.7.1"
scrapy-splash = "^0.8.0"
ipython = "^8.7.0"
black = "^22.12.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
